--- a/index.css
+++ b/index.css
@@ -13,7 +13,10 @@ html, body{
 .card{
     height: 50vh;
     width: 15vw;
-    padding: 1rem 4rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 1rem 2rem;
 }
 
 .card, h1{
@@ -51,7 +54,8 @@ button {
     -webkit-border-radius: 28;
     -moz-border-radius: 28;
     border-radius: 28px;
-    font-family: Arial;
+    font-family: Lexend Deca;
+    src: url(https://fonts.google.com/specimen/Lexend+Deca);
     font-size: 20px;
     color: hsl(31, 77%, 52%);
     background: #ffffff;
@@ -59,6 +63,7 @@ button {
     padding: 10px 20px 10px 20px;
     border: solid #ffffff 2px;
     text-decoration: none;
+    margin-bottom: 6%;
   }
   
   button:hover {
@@ -75,9 +80,63 @@ button {
     color: hsl(179, 100%, 13%);
   }
 
-@media (max-width: 850px) {
+/*Desktop*/
+@media (max-width: 1440px){
+
+    .card{
+        padding: 0.8rem 1.8rem;
+    }
+
+    .card h1{
+        font-size: 2.3rem;
+    }
+
+    .card p{
+        font-size: 1.1rem;
+    }
+}
+
+@media (max-width: 1020px){
+
+    .card h1{
+        font-size: 2rem;
+    }
+
+    .card p{
+        font-size: 0.8rem;
+    }
+
+    button{
+        font-size: 0.8rem;
+    }
+}
+
+/*mobile */
+@media (max-width:375px) {
+    html, body {
+        overflow: scroll;
+
+    }
     .container{
         flex-direction: column;
-    }
+        margin: 0 0 9%;
+    }  
     
+    .card{
+        height: 30vh;
+        width: 50vw;
+        padding: 1rem 2rem 2rem;
+    }
+
+    .card h1{
+        font-size: 1rem;
+    }
+
+    .card p{
+        font-size: 0.7rem;
+    }
+
+    button{
+        font-size: 0.7rem;
+    }
 }
